The prototype of searching docker IP by js is complete.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ print(helloworldstring)</div>
 								<div class="row">
 									<div class="col-md-12">
 										<p class="text-center">
-											<button type="button" class="btn btn-primary text-center"
+											<button type="button" class="btn btn-primary text-center start-oauth"
 												onclick="javascript: dropboxAuthorizeOnToken();">
 												Authorization
 											</button>
@@ -405,7 +405,7 @@ print(helloworldstring)</div>
 								<div class="row">
 									<div class="col-md-12">
 										<p class="text-center">
-											<button type="button" class="btn btn-primary text-center"
+											<button type="button" class="btn btn-primary text-center start-oauth"
 												onclick="githubAuthorizeOnToken();">
 												Authorization
 											</button>
