--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </style>
   
   <script src="/resource/jquery/1.12.4/jquery-1.12.4.min.js"></script>  
-  <script src="/resource/ace/ace-builds/src-min/ace.js"></script>  
+  <script src="/resource/ace/1.7.4/src-min/ace.js"></script>  
   <script src="/resource/base64/1.0/Base64.js"></script>    
   <script src="/resource/seed/javascript/Common.js" async></script>  
   <script src="/resource/seed/javascript/TimeCounter.js" async></script>
