--- a/index.html
+++ b/index.html
@@ -53,66 +53,66 @@
 </head>
   <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand main_navbar_item" href="./">CodeIn</a>
-                <a class="navbar-brand main_navbar_item" href="#" data-toggle="modal" data-target="#myModal">
-                  <i class="fa fa-cog" aria-hidden="true"></i> Setting
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand main_navbar_item" href="./">CodeIn</a>
+          <a class="navbar-brand main_navbar_item" href="#" data-toggle="modal" data-target="#myModal">
+            <i class="fa fa-cog" aria-hidden="true"></i> Setting
+          </a>
+          <a class="navbar-brand" href="#" onclick="javascript: executeCodeBody();">
+            <i class="fa fa-play" aria-hidden="true"></i> Run
+          </a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="#" data-toggle="modal" data-target="#newFile">
+                  <i class="fa fa-file-code-o" aria-hidden="true"></i> New 
                 </a>
-                <a class="navbar-brand" href="#" onclick="javascript: executeCodeBody();">
-                  <i class="fa fa-play" aria-hidden="true"></i> Run
+            </li>
+            <li>
+                <a href="#" onclick="javascript:exportFile();">
+                  <i class="fa fa-download" aria-hidden="true"></i> Export 
                 </a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#" data-toggle="modal" data-target="#newFile">
-                          <i class="fa fa-file-code-o" aria-hidden="true"></i> New 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="javascript:exportFile();">
-                          <i class="fa fa-download" aria-hidden="true"></i> Export 
-                        </a>
-                    </li>
-                    <li>
-                        <a 
-                          href="#" 
-                          data-toggle="modal" 
-                          data-target="#cloudapi" 
-                          onclick="prepareCloudService();">
-                          <i class="fa fa-cloud" aria-hidden="true"></i> Cloud 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" data-toggle="modal" data-target="#showTutorial">
-                          <i class="fa fa-file-code-o" aria-hidden="true"></i> Tutorial
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/jiankaiwang/CodeIn">
-                          <i class="fa fa-github-alt" aria-hidden="true"></i> Github
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://codein.github.com/"><i class="fa fa-question-circle-o" aria-hidden="true"></i></a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+            </li>
+            <li>
+                <a 
+                  href="#" 
+                  data-toggle="modal" 
+                  data-target="#cloudapi" 
+                  onclick="prepareCloudService();">
+                  <i class="fa fa-cloud" aria-hidden="true"></i> Cloud 
+                </a>
+            </li>
+            <li>
+                <a href="#" data-toggle="modal" data-target="#showTutorial">
+                  <i class="fa fa-file-code-o" aria-hidden="true"></i> Tutorial
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/jiankaiwang/CodeIn">
+                  <i class="fa fa-github-alt" aria-hidden="true"></i> Github
+                </a>
+            </li>
+            <li>
+                <a href="https://codein.github.com/"><i class="fa fa-question-circle-o" aria-hidden="true"></i></a>
+            </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
 
 <div class="row">
 <!-- code editor -->
@@ -145,6 +145,7 @@ print(helloworldstring)</div>
         Version&nbsp;&nbsp;
         <select class="selectpicker" id="version-selector">
           <option selected>5.1.3-Release</option>
+          <option>4.2.4-Release</option>
         </select>
         <hr />
         Environment&nbsp;&nbsp;
