add different swift versions

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
   
   <script src="/resource/jquery/1.12.4/jquery-1.12.4.min.js"></script>  
   <script src="/resource/ace/1.7.4/src-min/ace.js"></script>  
-  <script src="/resource/base64/1.0/Base64.js"></script>    
+  <script src="/resource/base64/1.0/Base64.js"></script>  
+  <script src="/resource/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="/resource/bootstrap-select/1.11.2/dist/js/bootstrap-select.js"></script>
   <script src="/resource/seed/javascript/Common.js" async></script>  
   <script src="/resource/seed/javascript/TimeCounter.js" async></script>
   <script src="/resource/seed/javascript/JqueryExtends.js" defer></script>
   <script src="/resource/seed/javascript/network.js" async></script>    
-  <script src="/resource/bootstrap-select/1.11.2/dist/js/bootstrap-select.js" defer></script>
-  <script src="/resource/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
   <script src="/resource/codein/0.0.1/dropboxapi.js" defer></script>
   <script src="/resource/codein/0.0.1/gistapi.js" defer></script>
   <script src="/resource/codein/0.0.1/general.js" defer></script>    
@@ -143,7 +143,7 @@ print(helloworldstring)</div>
         </select>
         <hr />
         Version&nbsp;&nbsp;
-        <select class="selectpicker" id="version-selector">
+        <select class="selectpicker version-selector" id="version-selector">
           <option selected>5.1.3-Release</option>
           <option>4.2.4-Release</option>
         </select>
